# aruna

./: .codecov.yml  .env  .gitignore  .gitmodules  2  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  README.md  build.rs  compose.yaml  compose_deploy.yaml  config.toml  diesel.toml
aruna-compute/: .env  Cargo.toml
aruna-compute/src/: error.rs  main.rs  poll.rs  task.rs  trigger.rs
aruna-data/: Cargo.toml  config.toml
aruna-data/.github/workflows/: docker-publish.yml
aruna-data/src/: client.rs  config.rs  error.rs  grpc.rs  lmdbstore.rs  main.rs  structs.rs
aruna-data/src/auth/: auth.rs  crypto.rs
aruna-data/src/caching/: cache.rs
aruna-data/src/database/: database.rs
aruna-data/src/old/: helpers.rs  macros.rs
aruna-data/src/old/auth/: mod.rs  rule_engine.rs
aruna-data/src/old/bundler/: mod.rs
aruna-data/src/old/caching/: grpc_query_handler.rs  mod.rs
aruna-data/src/old/data_backends/: location_handler.rs
aruna-data/src/old/grpc_api/: proxy_service.rs  user_service.rs
aruna-data/src/old/replication/: mod.rs
aruna-data/src/old/s3_frontend/: auth.rs  dropbox_handler.rs  s3server.rs  s3service.rs
aruna-data/src/replication/: replication_handler.rs
aruna-data/src/s3/: access.rs  auth.rs  mod.rs  object_writer.rs  route.rs  server.rs  service.rs  utils.rs
aruna-data/src/s3_frontend/: auth.rs  mod.rs
aruna-data/tests/: test.pem
aruna-server/: .env  .env2  .env3  .gitignore  Cargo.toml  Dockerfile  deploy.yaml
aruna-server/docs/: concept.md  todo.md
aruna-server/src/: constants.rs  context.rs  crypto.rs  error.rs  graph.rs  lib.rs  macros.rs  main.rs  models.rs
aruna-server/src/api/grpc/: group_service.rs  grpc_helpers.rs  grpc_mapping.rs  mod.rs  realm_service.rs  resource_service.rs  user_service.rs
aruna-server/src/api/rest/: api_paths.rs  mod.rs  openapi.rs  server.rs  utils.rs
aruna-server/src/models/: mod.rs  models.rs  requests.rs
aruna-server/src/requests/: auth.rs  controller.rs  group.rs  mod.rs  realm.rs  request.rs  resource.rs  transaction.rs  utils.rs
aruna-server/src/storage/: graph.rs  init.rs  milli_helpers.rs  mod.rs  obkv_ext.rs  store.rs  utils.rs  viewstore.rs
aruna-server/src/transactions/: auth.rs  component.rs  constraint.rs  controller.rs  events.rs  group.rs  license.rs  mod.rs  realm.rs  relation.rs  request.rs  resource.rs  rule.rs  search.rs  transaction.rs  user.rs
aruna-server/tests/: common.rs  create_test.rs  delete_tests.rs  init_db.mdb  lmdb_compact.rs  read_tests.rs  update_tests.rs
aruna-server/tests/test_db/events/: data.mdb
aruna-server/tests/test_db/store/: data.mdb
components/data_proxy/: .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  config.toml  docker-compose.test.yml
components/data_proxy/.github/: docker-publish.yml
components/data_proxy/.github/workflows/: docker-publish.yml
components/data_proxy/src/: config.rs  helpers.rs  macros.rs  main.rs  structs.rs
components/data_proxy/src/api/: aruna.api.internal.v1.rs  mod.rs
components/data_proxy/src/auth/: auth.rs  auth_helpers.rs  crypto.rs  mod.rs  rule_engine.rs  rule_structs.rs
components/data_proxy/src/backends/: mod.rs  s3_backend.rs  storage_backend.rs
components/data_proxy/src/bundler/: bundle_helper.rs  bundler.rs  bundler_web_server.rs  internal_bundler_service.rs  mod.rs
components/data_proxy/src/caching/: auth.rs  cache.rs  grpc_query_handler.rs  mod.rs  transforms.rs
components/data_proxy/src/data_backends/: filesystem_backend.rs  location_handler.rs  mod.rs  s3_backend.rs  storage_backend.rs
components/data_proxy/src/data_middleware/: data_middlware.rs  empty_middleware.rs  hashing_middleware.rs  mod.rs
components/data_proxy/src/data_server/: auth.rs  data_handler.rs  mod.rs  s3server.rs  s3service.rs  server.rs  utils.rs
components/data_proxy/src/database/: conversions.rs  database.rs  mod.rs  persistence.rs  persistence_helpers.rs  schema.sql
components/data_proxy/src/grpc_api/: bundler.rs  ingestion_service.rs  mod.rs  proxy_service.rs  user_service.rs
components/data_proxy/src/helpers/: encryption_helper.rs  mod.rs  zstd_helper.rs
components/data_proxy/src/presign_handler/: signer.rs
components/data_proxy/src/replication/: replication_handler.rs
components/data_proxy/src/s3_frontend/: auth.rs  data_handler.rs  dropbox_handler.rs  impersonating_client.rs  mod.rs  s3server.rs  s3service.rs
components/data_proxy/src/service_server/: server.rs
components/data_proxy/src/signing/: hmac.rs
components/data_proxy/src/storage_backend/: mod.rs  s3_backend.rs  storage_backend.rs
components/data_proxy/tests/: setup.sh  test.pub
components/server/: .env  Cargo.toml  Dockerfile
components/server/src/: macros.rs  main.rs
components/server/src/auth/: issuer_handler.rs  permission_handler.rs  structs.rs  token_handler.rs
components/server/src/caching/: cache.rs  notifications_handler.rs  structs.rs
components/server/src/database/: connection.rs  crud.rs  schema.sql
components/server/src/grpc/: authorization.rs  collections.rs  datasets.rs  endpoints.rs  hooks.rs  info.rs  licenses.rs  object.rs  projects.rs  relations.rs  rules.rs  search.rs  service_account.rs  users.rs  workspaces.rs
components/server/src/hooks/: hook_handler.rs
components/server/src/middlelayer/: announcements_db_handler.rs  clone_db_handler.rs  clone_request_types.rs  create_db_handler.rs  create_request_types.rs  db_handler.rs  delete_db_handler.rs  delete_request_types.rs  endpoints_request_types.rs  finish_db_handler.rs  finish_request_types.rs  hooks_db_handler.rs  hooks_request_types.rs  license_db_handler.rs  mod.rs  presigned_url_handler.rs  relations_db_handler.rs  relations_request_types.rs  replication_db_handler.rs  replication_request_types.rs  rule_db_handler.rs  rule_request_types.rs  service_account_request_types.rs  service_accounts_db_handler.rs  snapshot_request_types.rs  (+6 more)
components/server/tests/: database_tests.rs  grpc_tests.rs  notifications.rs  search.rs  setup.sh
hack/: Cargo.toml  lmdb_compact.rs  sign_token.rs
(+410 files in other folders)
