[workspace]
members = [
    "components/*",
]
resolver = "2"

[workspace.package]
version = "2.0.0-rc.2"
authors = ["Sebastian Beyvers <sb@pus.de>", "Jannis Hochmuth <jannis.hochmuth@cb.jlug.de>", "Lukas Brehm <lukas.brehm@cb.jlug.de>"]
edition = "2021"
repository = "https://github.com/ArunaStorage/aruna"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ahash = "0.8.11"
anyhow = "1.0.81"
aruna-rust-api = "2.0.0-beta.12"
async-channel = "2.2.0"
async-trait = "0.1.77"
aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"
base64 = "0.22.0"
cel-interpreter = "0.6.0"
cel-parser = "0.6.0"
chrono = "0.4.34"
dashmap = {version = "5.5.3", features = ["serde"]}
deadpool-postgres = "0.12.1"
diesel-ulid = "0.3.1"
dotenvy = "0.15.7"
futures = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = { version = "9.2.0", features = ["use_pem"] }
lazy_static = "1.4.0"
postgres-from-row = "=0.5.2"
postgres-types = { version = "0.2.6", features = ["derive"] }
prost-wkt-types = "0.5.0"
rand = "0.8.5"
reqsign = { version = "0.14.9"}
reqwest = { version = "0.11.26", features = ["stream", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["raw_value"] }
sha2 = {version = "0.10.8", features = ["std", "asm", "sha2-asm"]}
time = "0.3.34"
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic = { version = "0.11.0", features = ["tls", "tls-roots"] }
tower = { version = "0.4.13", features = ["retry"] }
url = "2.5.0"