[workspace]
members = [
    "components/*",
]
resolver = "2"

[workspace.package]
version = "2.0.0-rc.2"
authors = ["Sebastian Beyvers <sb@pus.de>", "Jannis Hochmuth <jannis.hochmuth@cb.jlug.de>", "Lukas Brehm <lukas.brehm@cb.jlug.de>"]
edition = "2021"
repository = "https://github.com/ArunaStorage/aruna"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ahash = "0.8.11"
anyhow = "1.0.86"
aruna-rust-api = "2.0.0"
async-channel = "2.3.1"
async-trait = "0.1.81"
aws-config = "1.5.4"
aws-sdk-s3 = "1.40.0"
base64 = "0.22.1"
cel-interpreter = "0.8.0"
cel-parser = "0.7.0"
chrono = "0.4.38"
dashmap = {version = "6.0.1", features = ["serde"]}
deadpool-postgres = "0.14.0"
diesel-ulid = "0.3.2"
dotenvy = "0.15.7"
futures = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
lazy_static = "1.5.0"
postgres-from-row = "=0.5.2"
postgres-types = { version = "0.2.6", features = ["derive"] }
prost-wkt-types = "0.5.1"
rand = "0.8.5"
reqsign = { version = "0.16.0"}
reqwest = { version = "0.12.5", features = ["stream", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["raw_value"] }
sha2 = {version = "0.10.8", features = ["std", "asm", "sha2-asm"]}
time = "0.3.36"
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tonic = { version = "0.11.0", features = ["tls", "tls-roots"] }
tower = { version = "0.4.13", features = ["retry"] }
url = "2.5.2"