[workspace]
members = ["aruna*"]
resolver = "2"

[workspace.package]
version = "2.1.0"
authors = [
    "Sebastian Beyvers <sb@pus.de>",
    "Jannis Hochmuth <jannis.hochmuth@cb.jlug.de>",
    "Lukas Brehm <lukas.brehm@cb.jlug.de>",
]
edition = "2021"
repository = "https://github.com/ArunaStorage/aruna"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
