[package]
name = "aruna_compute"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
tokio = { version = "1.38.0", features = ["full"] }
aruna_server = { path = "../aruna-server" }
ulid = { version = "1.1.3", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["stream", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["raw_value"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
dotenvy = "0.15.7"
thiserror = "2.0.0"
