[package]
name = "aruna_data"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async-stream = "0.3.5"
aws-smithy-http = "0.60.9"
byteorder = "1.5.0"
bytes = "1.6.0"
curve25519-dalek = "4.1.3"
digest = "0.10.7"
ed25519-dalek = { version = "2.1.1", features = ["pem"] }
futures-channel = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
http = "1.1.0"
hyper = { version = "1.4.1", features = ["full"] }
md-5 = "0.10.6"
#mime_guess = "2.0.5"
nom = "7.1.3"
pithos_lib = "0.6.1"
regex = "1.10.5"
#reqsign = "0.16.0"
s3s = { git = "https://github.com/Nugine/s3s.git" }
toml = "0.8.14"
#tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
zstd = "0.13.2"
hyper-util = { version = "0.1.6", features = [
    "server",
    "http1",
    "http2",
    "tokio",
    "service",
] }
http-body-util = "0.1.2"
anyhow = "1.0.86"
aruna-rust-api = { git = "https://github.com/ArunaStorage/rust-api.git", branch = "feat/v3" }
async-channel = "2.3.1"
async-trait = "0.1.82"
#aws-config = "1.5.5"
aws-sdk-s3 = "1.48.0"
base64 = "0.22.1"
#cel-interpreter = "0.9.0"
#cel-parser = "0.8.0"
chrono = "0.4.38"
dotenvy = "0.15.7"
futures = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
#jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
lazy_static = "1.5.0"
#prost-wkt-types = "0.6.0"
rand = "0.8.5"
#reqwest = { version = "0.12.5", features = ["stream", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["raw_value"] }
sha2 = { version = "0.10.8", features = ["std", "asm", "sha2-asm"] }
sha3 = { version = "0.10.8", features = ["std", "asm"] }
time = "0.3.36"
tokio = { version = "1.38.0", features = ["full"] }
#tokio-stream = { version = "0.1.15", features = ["net"] }
#tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
#tower = { version = "0.5.1", features = ["retry"] }
url = "2.5.2"
thiserror = "2.0.0"
crypto_kx = "0.2.1"
heed = "0.20.5"
ulid = { version = "1.1.3", features = ["serde"] }