[package]
name = "aruna_synevi"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6.5"
synevi = { version = "0.1.0" }
aruna-rust-api = { git = "https://github.com/ArunaStorage/rust-api.git", branch = "feat/v3" } 
serde = { version = "1.0.204", features = ["derive"] }
bincode = "1.3.3"
thiserror = "1.0.63"
ahash = "0.8.11"
ulid = {version = "1.1.3", features = ["serde"]}
tonic = { version = "0.12.0", features = ["tls", "tls-roots"] }
tokio = { version = "1.40.0", features = ["full"] }
dotenvy = "0.15.7"
chrono = "0.4.38"
utoipa = { version = "4.2.3", features = ["chrono", "axum_extras", "ulid"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
prost = "0.13.1"
axum = "0.7.5"
serde_json = "1.0.124"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
async-trait = "0.1.81"
growable-bloom-filter = { git = "https://github.com/ArunaStorage/growable-bloom-filters.git"}
base64 = "0.22.1"
hmac = "0.12.1"
jsonwebtoken = "9.3.0"
sha2 = "0.10.8"
reqwest = {version = "0.12.7", features = ["json"]}
prost-wkt = "0.6"
prost-wkt-types = "0.6"
heed = "0.20.5"

[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
tonic = { version = "0.12.0", features = ["tls", "tls-roots"] }
prost-build = "0.13"
prost-wkt-build = "0.6"
