[package]
name = "aruna_server"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6.5"
milli = { git = "https://github.com/arunaengine/meilisearch.git" }
synevi = { git = "https://github.com/arunaengine/synevi.git", branch = "feat/refactor_wait_handler" }
aruna-rust-api = { git = "https://github.com/arunaengine/rust-api.git", branch = "feat/v3" }
serde = { version = "1.0.214", features = ["derive"] }
bincode = "1.3.3"
thiserror = "2.0.0"
ahash = "0.8.11"
ulid = { version = "1.1.3", features = ["serde"] }
tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
tokio = { version = "1.41.1", features = ["full"] }
dotenvy = "0.15.7"
chrono = "0.4.38"
utoipa = { version = "5.2.0", features = ["chrono", "axum_extras", "ulid", "url"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
prost = "0.13.3"
axum = "0.7.7"
serde_json = "1.0.132"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
async-trait = "0.1.83"
base64 = "0.22.1"
jsonwebtoken = {git = "https://github.com/arunaengine/jsonwebtoken.git"}
sha2 = "0.10.8"
reqwest = { version = "0.12.9", features = ["json"] }
prost-wkt = "0.6"
prost-wkt-types = "0.6"
heed = "0.20.5"
typetag = "0.2.18"
obkv = "0.2.2"
roaring = "0.10.6"
rhai = "1.20"
url = { version = "2.5.3", features = ["serde"] }

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }
tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }
prost-build = "0.13.3"
prost-wkt-build = "0.6"
