[package]
name = "hacks"
version = "0.1.0"
edition = "2021"

[dependencies]
heed = "0.20.5"
anyhow = "1.0.93"
jsonwebtoken = {git = "https://github.com/arunaengine/jsonwebtoken.git"}
chrono = "0.4.38"
ulid = { version = "1.1.3", features = ["serde"] }
aruna_server = { path = "../aruna-server" }

[[bin]]
name = "lmdb_compact"
path = "lmdb_compact.rs"

[[bin]]
name = "sign_token"
path = "sign_token.rs"