[package]
edition = "2021"
name = "aos_data_proxy"
version = "2.0.0-rc.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aruna-file = "0.4.3"
aruna-rust-api = "2.0.0-beta.9"
async-channel = "2.1.0"
async-stream = "0.3.5"
async-trait = "0.1.74"
axum = "0.6.20"
aws-config = "0.56.1"
aws-sdk-s3 = "0.33.0"
aws-smithy-http = "0.56.1"
base64 = "0.21.5"
byteorder = "1.5.0"
bytes = "1.5.0"
chrono = "0.4.31"
dotenvy = "0.15.7"
futures = "0.3.29"
futures-channel = "0.3.29"
futures-core = "0.3.29"
futures-util = "0.3.29"
hex = "0.4"
hmac = "0.12.1"
http = "0.2.11"
hyper = {version = "0.14.27", features = ["full"]}
md-5 = "0.10.6"
rand = "0.8.5"
reqwest = "0.11.22"
s3s = "0.8.0"
serde = {version = "1.0.192", features = ["derive"]}
sha2 = {version = "0.10.8", features = ["std", "asm", "sha2-asm"]}
tokio = {version = "1.34.0", features = ["full"]}
tokio-stream = "0.1.14"
tower = { version = "0.4.13", features = ["retry"] }
tonic = {version = "0.10.2", features = ["tls", "tls-roots"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "time"]}
url = "2.4.1"
zstd = "0.13.0"
diesel-ulid = "0.3.1"
bincode = "1.3.3"
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"] }
postgres-types = { version = "0.2.6", features = ["derive"] }
postgres_array = "0.11.1"
deadpool-postgres = "0.11.0"
postgres-from-row = "=0.5.2"
dashmap = "5.5.3"
ahash = "0.8.6"
jsonwebtoken = {version = "9.1.0", features = ["use_pem"]}
prost-wkt-types = "0.5.0"
time = "0.3.30"
digest = "0.10.7"
reqsign = "0.14.3"

[profile.release]
panic = 'abort'
