[package]
edition = "2021"
name = "aos_data_proxy"
version = "2.0.0-rc.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
aruna-rust-api = { git = "https://github.com/ArunaStorage/rust-api.git", branch = "pre/beta12" }
pithos_lib = { git = "https://github.com/ArunaStorage/aruna-file.git", branch = "feat/pithos_rework" }
async-channel = "2.2.0"
async-stream = "0.3.5"
async-trait = "0.1.77"
axum = "0.7.4"
aws-config = "0.56.1"
aws-sdk-s3 = "0.33.0"
aws-smithy-http = "0.56.1"
base64 = "0.21.7"
byteorder = "1.5.0"
bytes = "1.5.0"
chrono = "0.4.34"
dotenvy = "0.15.7"
futures = "0.3.30"
futures-channel = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
http = "0.2.11"
hyper = {version = "0.14.28", features = ["full"]}
md-5 = "0.10.6"
rand = "0.8.5"
reqwest = {version = "0.11.24", features = ["stream"]}
s3s = "0.8.1"
serde = {version = "1.0.197", features = ["derive"]}
sha2 = {version = "0.10.8", features = ["std", "asm", "sha2-asm"]}
tokio = {version = "1.36.0", features = ["full"]}
tokio-stream = "0.1.14"
tower = { version = "0.4.13", features = ["retry"] }
tonic = {version = "0.11.0", features = ["tls", "tls-roots"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "time"]}
url = "2.5.0"
zstd = "0.13.0"
diesel-ulid = "0.3.1"
bincode = "1.3.3"
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"] }
postgres-types = { version = "0.2.6", features = ["derive"] }
postgres_array = "0.11.1"
deadpool-postgres = "0.12.1"
postgres-from-row = "=0.5.2"
dashmap = "5.5.3"
ahash = "0.8.9"
jsonwebtoken = {version = "9.2.0", features = ["use_pem"]}
prost-wkt-types = "0.5.0"
time = "0.3.34"
digest = "0.10.7"
reqsign = "0.14.3"
serde_json = "1.0.114"
crossbeam-skiplist = "0.1.3"
lazy_static = "1.4.0"
toml = "0.8.10"
cel-interpreter = "0.6.0"
cel-parser = "0.6.0"
nom = "7.1.3"
mime_guess = "2.0.4"

[profile.release]
panic = 'abort'
