[package]
name = "data_proxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = {workspace = true}
anyhow = {workspace = true}
aruna-rust-api = {workspace = true}
async-channel = {workspace = true}
async-stream = "0.3.5"
async-trait = {workspace = true}
aws-config =  {workspace = true}
aws-sdk-s3 =  {workspace = true}
aws-smithy-http = "0.60.7"
base64 = {workspace = true}
byteorder = "1.5.0"
bytes = "1.5.0"
cel-interpreter = {workspace = true}
cel-parser = {workspace = true}
chrono = {workspace = true}
crossbeam-skiplist = "0.1.3"
curve25519-dalek = "4.1.2"
dashmap = {workspace = true}
deadpool-postgres = {workspace = true}
diesel-ulid = {workspace = true}
digest = "0.10.7"
dotenvy = {workspace = true}
ed25519-dalek = { version = "2.1.1", features = ["pem"]}
futures = {workspace = true}
futures-channel = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
hex = {workspace = true}
hmac = {workspace = true}
http = "0.2.12"
hyper = {version = "0.14.28", features = ["full"]}
jsonwebtoken = {workspace = true}
lazy_static = {workspace = true}
md-5 = "0.10.6"
mime_guess = "2.0.4"
nom = "7.1.3"
pithos_lib = "0.5.1"
postgres-from-row = {workspace = true}
postgres-types = {workspace = true}
postgres_array = "0.11.1"
prost-wkt-types = {workspace = true}
rand = {workspace = true}
regex = "1.10.4"
reqsign = "0.15.0"
reqwest = {workspace = true}
s3s = "0.9.0"
serde = {workspace = true}
serde_json = {workspace = true}
sha2 = {workspace = true}
time = {workspace = true}
tokio = {workspace = true}
tokio-postgres = {workspace = true}
tokio-stream = {workspace = true}
toml = "0.8.11"
tonic = {workspace = true}
tower = {workspace = true}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter", "time"]}
url = {workspace = true}
zstd = "0.13.0"